Animation activated done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
+    <!-- animate link -->
+    <link rel="stylesheet" href="./css/animate.css">
+
     <!-- style css linking -->
     <link rel="stylesheet" href="./css/style.css">
 
@@ -82,10 +85,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="inner-banner">
-                        <p>50% Discount for first ride</p>
-                        <h1>Save Your Time</h1>
+                        <p class="wow bounceInDown">50% Discount for first ride</p>
+                        <h1 class="wow bounceInLeft">Save Your Time</h1>
 
-                        <div class="button">
+                        <div class="button wow bounceInRight">
                             <a class="btn btn-primary" href="#">Book Now</a>
                             <div class="white"></div>
                             <i class="bi bi-play-fill"></i>
@@ -99,11 +102,11 @@
     <!-- banner part end -->
 
     <!-- book now part start -->
-    <section class="book-now">
+    <section class="book-now wow bounceInLeft">
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 offset-lg-2">
-                    <form class="main-form">
+                    <form class="main-form ">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-part">
@@ -140,7 +143,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
-                    <div class="title">
+                    <div class="title wow bounceInLeft">
                         <h2>Services</h2>
                         <div class="service-img">
                             <img src="./images/main car.png" alt="">
@@ -150,14 +153,14 @@
                 <div class="col-lg-8">
                     <div class="services-part">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 wow bounceInUp">
                                 <div class="service-card-part cl1">
                                     <img src="./images/Vector(1).png" alt="">
                                     <h5>Rent a Car</h5>
                                     <p>At vero eos et accusamus et ius odio dignissimqui for it</p>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 wow bounceInUp">
                                 <div class="service-card-part cl2">
                                     <img src="./images/Vector(2).png" alt="">
                                     <h5>Rent a Truck</h5>
@@ -166,14 +169,14 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 wow bounceInRight">
                                 <div class="service-card-part cl2">
                                     <img src="./images/Vector(3).png" alt="">
                                     <h5>Weading Car</h5>
                                     <p>At vero eos et accusamus et ius odio dignissimqui for it</p>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 wow bounceInRight">
                                 <div class="service-card-part cl1">
                                     <img src="./images/Vector(4).png" alt="">
                                     <h5>City Tour</h5>
@@ -194,14 +197,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="title">
+                    <div class="title wow bounceInLeft">
                         <h2>feature Images</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-sm-12">
-                    <div class="team-area">
+                    <div class="team-area wow bounceInLeft">
                         <div class="single-team">
                             <img src="./images/feature-1.png" alt="">
                             <div class="team-text">
@@ -218,7 +221,7 @@
                     </div>
                 </div>
                 <div class="col-lg-9 col-sm-12">
-                    <div class="team-area-1">
+                    <div class="team-area-1 wow bounceInRight">
                         <div class="single-team">
                             <img src="./images/feature-2.png" alt="">
                             <div class="team-text">
@@ -236,7 +239,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-sm-12">
+                <div class="col-lg-3 col-sm-12  wow bounceInLeft">
                     <div class="team-area-2">
                         <div class="single-team">
                             <img src="./images/feature-3.png" alt="">
@@ -254,7 +257,7 @@
                     </div>
                 </div>
                 <div class="col-lg-9 col-sm-12">
-                    <div class="team-area-3">
+                    <div class="team-area-3 wow bounceInRight">
                         <div class="single-team">
                             <img src="./images/feature-4.png" alt="">
                             <div class="team-text">
@@ -282,18 +285,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="title">
+                    <div class="title  wow bounceInRight">
                         <h2>Recent News</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-sm-12">
+                <div class="col-lg-5 col-sm-12  wow bounceInLeft">
                     <div class="recent-img">
                         <img src="./images/recent-img-1.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-7  wow bounceInRight">
                     <div class="recent-content">
                         <h4>Music And Car In The Life Of Great people, Car Under A Blue Sky </h4>
                         <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the we denounce with righteous indignation...</p>
@@ -305,12 +308,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-sm-12">
+                <div class="col-lg-5 col-sm-12  wow bounceInLeft">
                     <div class="recent-img">
                         <img src="./images/recent-img-2.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-7  wow bounceInRight">
                     <div class="recent-content cl2 ">
                         <h4>How Car Can Make You Happy & Everybody Should Go Long Drive</h4>
                         <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the we denounce with righteous indignation...</p>
@@ -322,12 +325,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-5 col-sm-12">
+                <div class="col-lg-5 col-sm-12  wow bounceInLeft">
                     <div class="recent-img">
                         <img src="./images/recent-img-3.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-7  wow bounceInRight">
                     <div class="recent-content">
                         <h4>This Is How You Search For The Right kind Of Car for Your Family</h4>
                         <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the we denounce with righteous indignation...</p>
@@ -345,13 +348,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="title">
+                    <div class="title  wow bounceInRight">
                         <h1>Testimonial</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 offset-lg-2">
+                <div class="col-lg-8 offset-lg-2  wow bounceInLeft">
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -574,13 +577,13 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6  wow bounceInLeft">
                     <div class="footer-left">
                         <img src="./images/logo.png" alt="">
                         <p>436 Homewood Drive Benton Harbor, MI 49022</p>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6  wow bounceInRight">
                     <div class="footer-right">
                         <div class="row">
                             <div class="col-md-4">
@@ -640,12 +643,12 @@
         <div class="footer-down">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-sm-12">
+                    <div class="col-lg-6 col-sm-12  wow bounceInLeft">
                         <div class="footer-down-left">
                             <p>All Rights Reserved By Rentlia</p>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-sm-12">
+                    <div class="col-lg-6 col-sm-12  wow bounceInRight">
                         <div class="footer-down-right">
                             <ul>
                                 <a href="# ">
@@ -681,6 +684,9 @@
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js "></script>
     <script src="./js/animationCounter.js "></script>
+
+    <!-- wow js linking -->
+    <script src="./js/wow.js"></script>
 
 
 
@@ -742,39 +748,16 @@
     </script>
 
 
+    <!-- wow js code -->
 
-    <!-- <header class="header">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="logo">
-                    <img src="./images/logo.png" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="menu-part">
-                    <ul>
-                        <a href="#">
-                            <li>Home</li>
-                        </a>
-                        <a href="#">
-                            <li>About</li>
-                        </a>
-                        <a href="#">
-                            <li>Service</li>
-                        </a>
-                        <a href="#">
-                            <li>Testimonial</li>
-                        </a>
-                        <a href="#">
-                            <li>Contact</li>
-                        </a>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</header> -->
+    <script>
+        new WOW().init();
+    </script>
+
+
+
+
+
 
 
 
